[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Old_Man_NPC.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/craftpix-free-villagers-sprite/1 Old_man/Old_man_idle.png" type="Texture" id=2]
[ext_resource path="res://assets/images/SpeechBubble-2.png" type="Texture" id=4]
[ext_resource path="res://assets/images/SpeechBubble-1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/SpeechBubble-3.png" type="Texture" id=6]

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 2.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.4, 1.8, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 1, 3, 1, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Speech"
length = 20.0
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 7.1, 12.1, 18.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "_speakNextBubble"
}, {
"args": [  ],
"method": "_speakNextBubble"
}, {
"args": [  ],
"method": "_speakNextBubble"
}, {
"args": [  ],
"method": "_speakNextBubble"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 2.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.4, 1.8, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 1, 3, 1, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Speech"
length = 20.0
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 7.1, 12.1, 18.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "_speakNextBubble"
}, {
"args": [  ],
"method": "_speakNextBubble"
}, {
"args": [  ],
"method": "_speakNextBubble"
}, {
"args": [  ],
"method": "_speakNextBubble"
} ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 19.0

[node name="Old_Man_NPC" type="KinematicBody2D"]
position = Vector2( -49, -51 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5.71428, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
flip_h = true
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Speech = SubResource( 4 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 5 )
anims/Speech = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 25, 17 )
shape = SubResource( 3 )
disabled = true

[node name="Speech" type="Node2D" parent="."]
position = Vector2( 5.71428, 0 )
scale = Vector2( 2, 2 )

[node name="SpeechBubble" type="TextureRect" parent="Speech"]
visible = false
margin_left = -6.85713
margin_top = -35.5
margin_right = 993.143
margin_bottom = 264.5
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="SpeechBubble2" type="TextureRect" parent="Speech"]
visible = false
margin_left = -6.85713
margin_top = -35.5
margin_right = 993.143
margin_bottom = 264.5
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="SpeechBubble3" type="TextureRect" parent="Speech"]
visible = false
margin_left = -6.85713
margin_top = -35.5
margin_right = 993.143
margin_bottom = 264.5
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )
